registry-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-ui
  namespace: default
spec:
  parentRefs:
  - name: devkit-gateway
    namespace: default
  hostnames:
  - "registry.lab.devkit"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: registry-ui
      port: 80
